--- a/frontend/alapstilus.css
+++ b/frontend/alapstilus.css
@@ -1,14 +1,83 @@
 .invalid {
-    border-color: red;
+  border-color: red;
 }
 
 .invalid::placeholder {
-    color: red; 
-    background-color: rgba(255, 0, 0, 0.1); 
+  color: red;
+  background-color: rgba(255, 0, 0, 0.1);
 }
 
-#kereso{
-    margin: 5px !important;
-
+#kereso {
+  margin: 5px !important;
+}
+body {
+  background-color: #e6f7ff;
+}
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
+.regH2 {
+    margin-top:100px ;
+}
+/**/
+.bejelentkezes {
+  height: 100vh;
+  width: 100%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+.regisztracio {
+  height: calc(100vh - 70px); 
+  width: 100%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+.form {
+  position: relative;
+  filter: drop-shadow(0 0 2px #000000);
+  border-radius: 5px;
+  width: 360px;
+  height: auto; /* Change this */
+  background-color: #ffffff;
+  padding: 40px;
+}
+
+.form input {
+  outline: 0;
+  background: #f2f2f2;
+  border-radius: 4px;
+  width: 100%;
+  border: 0;
+  margin: 15px 0;
+  padding: 15px;
+  font-size: 14px;
+}
+.form input:focus {
+  box-shadow: 0 0 5px 0 rgba(106, 98, 210);
+}
+.form button {
+  outline: 0;
+  background: #6a62d2;
+  width: 100%;
+  border: 0;
+  margin-top: 10px;
+  border-radius: 3px;
+  padding: 15px;
+  color: #ffffff;
+  font-size: 15px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.4s ease-in-out;
+  cursor: pointer;
+}
+.form button:hover,
+.form button:active,
+.form button:focus {
+  background: black;
+  color: #fff;
+}
