--- a/frontend/diakCegForm.css
+++ b/frontend/diakCegForm.css
@@ -80,3 +80,18 @@ main {
   background: black;
   color: #fff;
 }
+
+
+@media (max-width: 800px) {
+  .adatokForm {
+    width: 90%;  
+    padding: 20px;  
+  }
+}
+
+@media (max-width: 500px) {
+  .adatokForm {
+    width: 95%;  
+    padding: 10px;  
+  }
+}
