--- a/frontend/diakCegForm.css
+++ b/frontend/diakCegForm.css
@@ -1,3 +1,12 @@
+.invalid {
+  border-color: red;
+}
+
+.invalid::placeholder {
+  color: red;
+  background-color: rgba(255, 0, 0, 0.1);
+}
+
 body {
   background-color: #e6f7ff;
 }
